--- a/FloatingActionButton-Sample/res/layout/activity_main.xml
+++ b/FloatingActionButton-Sample/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:onClick="fabClicked"
-        app:color="#FFDF4D38"
-        app:drawable="@drawable/ic_content_discard" />
+        app:fab_color="#FFDF4D38"
+        app:fab_drawable="@drawable/ic_content_discard" />
 
 </FrameLayout>
