--- a/FloatingActionButton/res/values/attrs.xml
+++ b/FloatingActionButton/res/values/attrs.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="FloatingActionButton">
-        <attr name="drawable" format="integer"/>
-        <attr name="color" format="color"/>
-        <attr name="shadowRadius" format="float"/>
-        <attr name="shadowDx" format="float"/>
-        <attr name="shadowDy" format="float"/>
-        <attr name="shadowColor" format="integer"/>
+    <declare-styleable name="fab_FloatingActionButton">
+        <attr name="fab_drawable" format="integer"/>
+        <attr name="fab_color" format="color"/>
+        <attr name="fab_shadowRadius" format="float"/>
+        <attr name="fab_shadowDx" format="float"/>
+        <attr name="fab_shadowDy" format="float"/>
+        <attr name="fab_shadowColor" format="integer"/>
     </declare-styleable>
 
 </resources>
